--- a/changelog.txt
+++ b/changelog.txt
@@ -2,3 +2,4 @@
 - initial release
 - brief rudimentary search and featured Items page listings
 - image quality settings
+- windows release needs the bundled cURL release (see releases)
